--- a/index.html
+++ b/index.html
@@ -500,5 +500,235 @@
         </div>
       </div>
     </div>
+        <div id="sectionOffers">
+      <div class="explore-section pt-5 pb-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 mb-3">
+              <h1 class="eplore-heading">Explore Deals & Offers</h1>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="explore-card shadow p-4">
+                <h1 class="explore-card-heading mb-4">
+                  Up to 80% Off | Electronics & Gadgets
+                </h1>
+                <div class="d-flex flex-row">
+                  <div class="inner-card">
+                    <img
+                      class="card-image"
+                      src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-mamba-watch-img.png"
+                    />
+                    <p class="card-product-name">Smart Watch</p>
+                  </div>
+                  <div class="inner-card">
+                    <img
+                      class="card-image"
+                      src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-camera-img.png"
+                    />
+                    <p class="card-product-name">Cameras</p>
+                  </div>
+                </div>
+                <div class="d-flex flex-row">
+                  <div class="inner-card">
+                    <img
+                      class="card-image"
+                      src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-sport-and-fitness-img.png"
+                    />
+                    <p class="card-product-name">Sports & Fitness</p>
+                  </div>
+                  <div class="inner-card">
+                    <img
+                      class="card-image"
+                      src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-ear-phones-pink-img.png"
+                    />
+                    <p class="card-product-name">Earphones</p>
+                  </div>
+                </div>
+                <div>
+                  <a class="explore-card-link"
+                    >See All Deals
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="23"
+                      height="23"
+                      fill="currentColor"
+                      class="bi bi-arrow-right-short"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"
+                      />
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+              <div class="explore-card shadow p-4">
+                <h1 class="explore-card-heading mb-4">
+                  Festive Offers TVs & appliances
+                </h1>
+                <div class="inner-card">
+                  <img
+                    class="card-image"
+                    src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-tv-img.png"
+                  />
+                </div>
+                <a class="explore-card-link"
+                  >See All Deals
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="23"
+                    height="23"
+                    fill="currentColor"
+                    class="bi bi-arrow-right-short"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"
+                    />
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
+              <div class="explore-card shadow p-4">
+                <h1 class="explore-card-heading mb-4">
+                  Under Rs 4000 | Friendly Accessories
+                </h1>
+                <div class="d-flex flex-row">
+                  <div class="inner-card mb-3">
+                    <img
+                      class="card-image"
+                      src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-tablet-device-img.png"
+                    />
+                    <p class="card-product-name">Tablet</p>
+                  </div>
+                  <div class="inner-card mb-3">
+                    <img
+                      class="card-image"
+                      src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-joy-stick-img.png"
+                    />
+                    <p class="card-product-name">PlayStation</p>
+                  </div>
+                </div>
+                <div class="d-flex flex-row">
+                  <div class="inner-card mb-3">
+                    <img
+                      class="card-image"
+                      src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-speakers-big-img.png"
+                    />
+                    <p class="card-product-name">Speakers</p>
+                  </div>
+                  <div class="inner-card mb-3">
+                    <img
+                      class="card-image"
+                      src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-vr-set-img.png"
+                    />
+                    <p class="card-product-name">Virtual Reality Set</p>
+                  </div>
+                </div>
+                <div>
+                  <a class="explore-card-link"
+                    >See All Deals
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="23"
+                      height="23"
+                      fill="currentColor"
+                      class="bi bi-arrow-right-short"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"
+                      />
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="contact-section">
+        <h1 class="contact-heading">Let us Join Together</h1>
+        <button class="contact-button">CONTACT US</button>
+      </div>
+    </div>
+    <div>
+      <div class="footer-section pt-5 pb-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-md-6 col-lg-3">
+              <div class="text-center text-md-left mb-5">
+                <img
+                  class="footer-image"
+                  src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-website-logo-img.png"
+                />
+                <div
+                  class="d-flex flex-row justify-content-center justify-content-md-start mb-4"
+                >
+                  <div class="icon-contanier">
+                    <i class="footer-icon fa-brands fa-google"></i>
+                  </div>
+                  <div class="icon-contanier">
+                    <i class="footer-icon fa-brands fa-twitter"></i>
+                  </div>
+                  <div class="icon-contanier">
+                    <i class="footer-icon fa-brands fa-instagram"></i>
+                  </div>
+                  <div class="icon-contanier">
+                    <i class="footer-icon fa-brands fa-linkedin"></i>
+                  </div>
+                </div>
+                <p class="footer-address text-secondary">
+                  37, Ayur Vigyan Nagar, New Delhi, India.
+                </p>
+              </div>
+            </div>
+            <div class="col-6 col-md-6 col-lg-3">
+              <h1 class="footer-heading mb-3">Get to know us</h1>
+              <ul class="footer-list mb-5">
+                <li class="list-text">About us</li>
+                <li class="list-text">Carrer</li>
+                <li class="list-text">Press Released</li>
+                <li class="list-text">Gift a smile</li>
+              </ul>
+            </div>
+            <div class="col-6 col-md-6 col-lg-3">
+              <h1 class="footer-heading mb-3">Contact with us</h1>
+              <ul class="footer-list mb-5">
+                <li class="list-text">FacebooK</li>
+                <li></li>
+                <li class="list-text">Twitter</li>
+                <li class="list-text">Instagram</li>
+              </ul>
+            </div>
+            <div class="col-6 col-md-6 col-lg-3">
+              <h1 class="footer-heading mb-3">Let Us Help You</h1>
+              <ul class="footer-list">
+                <li class="list-text">100% Purchase</li>
+                <li class="list-text">Protection</li>
+                <li class="list-text">Your Account</li>
+                <li class="list-text">Return Centre</li>
+                <li class="list-text">Help</li>
+              </ul>
+            </div>
+            <div class="col-12">
+              <hr class="footer-horigontalline" />
+              <p class="footer-copyright text-center text-secondary">
+                <i class="footer-icon fa-regular fa-copyright"></i>
+                2024 by sandeep. Created with Bootstrap.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
